--- a/Public/CSS/ProfileStyles.css
+++ b/Public/CSS/ProfileStyles.css
@@ -10,6 +10,31 @@ main{
 
 }
 
+img{
+
+	border-radius:50%;
+	margin:auto;
+	height: 150px;
+    width: 150px;
+    margin-top: 10px;
+    display: block;
+    margin-bottom: 10px;
+    cursor: pointer;
+
+}
+
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+input.visually-hidden:focus + label {
+  outline: thin dotted;
+}
+
 form{
 
 	color:#dcdfe0;
