--- a/Public/CSS/NavBar.css
+++ b/Public/CSS/NavBar.css
@@ -1,34 +1,22 @@
-nav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-ul{
-
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-	
-}
-
-li {
-  float: left;
-}
-
-li a {
+#navigation{
+  background-color:black;
   display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+  width: 100%;
 }
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #111;
+ul {
+  list-style-type: none;
+
+  margin: 0;
+  padding: 0;
+
+  overflow: hidden;
+}
+
+.right {
+  float: right;
+}
+
+.left{
+  float: left;
 }
