--- a/Public/CSS/Form.css
+++ b/Public/CSS/Form.css
@@ -1,3 +1,7 @@
+html, body{
+	background-color: #a6c3bb;
+}
+
 main{
 	text-align:center;
 	width: 100%;
@@ -110,6 +114,7 @@ a{
 a:hover{
 	text-decoration: underline;
 }
+/* might want to merge with background-styles*/
 
 button{
 	width: 300px;
