--- a/Public/CSS/Main.css
+++ b/Public/CSS/Main.css
@@ -6,10 +6,16 @@
 	align-items: center;
 	justify-content: center;
 }
-h3{
-	padding-left: 10%;
-	font-size: 3em;
+
+.text-center{
+	text-align: center;
 }
+
+.channel-search{
+	font-size: 2em;
+	padding-bottom: 2%;
+}
+
 .stream-window{
 	border: 2px #050505;
 	margin: 20px;
@@ -17,6 +23,11 @@ h3{
 	width: 500px;
 	height: 300px;
 	position: relative;
+}
+
+.stream-title{
+	margin: 1em;
+	padding-left: 13%; 
 }
 
 .window-1{
@@ -35,3 +46,28 @@ h3{
 	bottom: -5px;
 	left: -100px;
 }
+
+.carousel-btn{
+	height: 2em;
+	width: 2em;
+}
+
+.jumbotron{
+	width: 100%;
+	height: 100%;
+	background: #959da3;
+	display: flex;
+	flex-direction: column;
+}
+
+.jumbotron > .title{
+	padding-left: 5%;
+	margin-bottom: 0;
+}
+
+.jumbotron > .lead{
+	padding-left: 5%;
+	font-size: 24px;
+}
+
+
