--- a/Public/CSS/NavBar.css
+++ b/Public/CSS/NavBar.css
@@ -1,6 +1,6 @@
-#navigation{
+/* #navigation{
 	opacity:0;
-}
+} */
 
 ul {
   	list-style-type: none;
@@ -42,6 +42,7 @@ li > a{
 	margin: auto;
 	padding: 10px;
 	color:#f4f5f5;
+	text-decoration: none;
 }
 
 li > a:hover{
