--- a/Public/CSS/Background-Styles.css
+++ b/Public/CSS/Background-Styles.css
@@ -1,10 +1,13 @@
 /* https://coolors.co/545f66-829399-d0f4ea-e8fcc2-b1cc74 */
+:root{
+
+}
+
 html, body{
 	margin: 0;
 	padding: 0;
 
 	font-family: "Raleway", sans-serif;
-
 	-webkit-user-select: none; /* Safari */        
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE10+/Edge */
