--- a/Public/CSS/NavBar.css
+++ b/Public/CSS/NavBar.css
@@ -20,6 +20,16 @@
 	box-shadow: 0px 0px 9px 2px #141817;
 }
 
+.login{
+	background: #a6c3bb;
+	height: 100%;
+	border-radius: 5px;
+}
+
+.login > a {
+	color: black;
+}
+
 .right {
 	float: right;
 }
@@ -43,6 +53,7 @@
 	padding: 10px;
 	color:#f4f5f5;
 	text-decoration: none;
+	color:#f4f5f5;
 }
 
 .nav > a:hover{
