--- a/Public/CSS/Community/Community.css
+++ b/Public/CSS/Community/Community.css
@@ -13,6 +13,7 @@ html, body{
     display: flex;    
     flex-direction: row;
     height: 100%;
+    overflow-y: hidden;
 }
 
 /* groups */
@@ -65,6 +66,7 @@ html, body{
 #chat-container{
     display: flex;
     flex: 1;
+    overflow: hidden;
 }
 
 .flex-row{
@@ -79,6 +81,7 @@ html, body{
 #chat-container > #window{
     background: rgb(53, 75, 64);
     flex: 1;
+    overflow-y: hidden;
 }
 
 #chat-container > #input{
@@ -87,6 +90,8 @@ html, body{
     max-height: 10%;
     display: flex;
     align-items: center;
+    /* grammarly tries to overwrite this rule */
+    position: static !important;
 }
 
 
@@ -114,10 +119,26 @@ html, body{
     margin: 2%;
     background: white;
     border-radius: 10px;
+    max-height: 92%;
+    overflow: auto;
 }
 
 #window > ul > li {
     list-style-type: none;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
 .msg {
