--- a/Public/CSS/Profile.css
+++ b/Public/CSS/Profile.css
@@ -14,7 +14,7 @@ img{
     display: block;
     margin-bottom: 10px;
     cursor: pointer;
-    border: solid #29302e 2px;
+    border: solid #3e4442 2px;
 
 }
 
