--- a/Public/CSS/NavBar.css
+++ b/Public/CSS/NavBar.css
@@ -51,6 +51,8 @@
 .dropdown {
 	display: inline-block;
 	height: 100%;
+	min-width: 7em;
+	width: auto;
 	z-index: 1; /* Z-Index must be greater than dropProfile */
 }
 
@@ -79,8 +81,10 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
+  background-color: var(--card-bg);
+  min-width: 7em;
+  max-width: 25vw;
+  width: 100%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
