--- a/Public/CSS/Community/List.css
+++ b/Public/CSS/Community/List.css
@@ -31,3 +31,10 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 2em;
 }
+
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
