--- a/Public/CSS/Community/List.css
+++ b/Public/CSS/Community/List.css
@@ -30,6 +30,7 @@
     background: var(--card-bg);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 2em;
+    margin: 1em;
 }
 
 button:disabled,
