--- a/Public/CSS/Form.css
+++ b/Public/CSS/Form.css
@@ -2,6 +2,18 @@ html, body{
 	background-color: #a6c3bb;
 }
 
+#homePage{
+	font-size: 30px;
+	position: relative;
+	right: 185px;
+	top:35px;
+	color: #dcdfe0;
+}
+
+h1{
+	margin-top: 0;
+}
+
 video#bgvid { 
     position: fixed;
     top: 50%;
