--- a/Public/CSS/NavBarVertical.css
+++ b/Public/CSS/NavBarVertical.css
@@ -58,10 +58,12 @@ body, html{
 }
 
 .sub{
+	padding-left: 10px;
 	text-align: left;
 	font-size: 18px;
 }
 
 .sub:hover{
+	padding-left: 5px;
 	text-align: left;
 }
