--- a/Public/CSS/Community/Channels.css
+++ b/Public/CSS/Community/Channels.css
@@ -8,13 +8,17 @@ html, body{
     height: 100%;
     display: flex;
     flex-flow: column;
+    overflow: hidden;
 }
+
+/* Chat */
 
 .group-item {
     list-style-type: none;
     font-size: 150%;
     text-align: center;
-    padding: 15% 0;
+    padding: 5% 0;
+    margin: 15% 0;
     width: 100%;
 }
 
@@ -24,16 +28,17 @@ html, body{
 
 .channel{
     border-radius: 50%;
+    transition: border-radius 0.5s;
 }
 
 .channel:hover{
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(255, 255, 255);
+    border-radius: 30%;
 }
 
 .img{
     padding: 15% 0;
+    height: 70px;
+    width: 70px;
 }
 
 .noImg{
