--- a/Public/CSS/Main.css
+++ b/Public/CSS/Main.css
@@ -1,3 +1,7 @@
+html, body{
+	height: 100%;
+}
+
 #banner{
 	text-align: center;
 	width: 100%;
@@ -12,10 +16,10 @@
 
 .jumbotron{
 	width: 100%;
-	height: 100%;
 	background: #959da3;
 	display: flex;
 	flex-direction: column;
+	border-bottom: solid 1px white;
 }
 
 .jumbotron > .title{
