--- a/Public/CSS/Community/Channels.css
+++ b/Public/CSS/Community/Channels.css
@@ -3,27 +3,43 @@ html, body{
     margin: 0;
 }
 
-#root{
+#app, #root{
     width: 100%;
     height: 100%;
+}
+
+#root{
     display: flex;
     flex-flow: column;
     overflow: hidden;
 }
 
-/* Chat */
-
-.group-item {
-    list-style-type: none;
-    font-size: 150%;
-    text-align: center;
-    padding: 5% 0;
-    margin: 15% 0;
+#main-container{
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row;
 }
 
-.group-item:hover{
-    background: #75777a;
+
+/* channel bar */
+
+#channel-bar{
+    width: 6em;
+    height: 100%;
+    background: #272829;
+}
+
+#channel-bar > ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#channel-bar > ul > li {
+    list-style-type: none;
 }
 
 .channel{
@@ -51,5 +67,146 @@ html, body{
     color: white;
 }
 
+/* group bar */
+
+#group-bar{
+    width: 8em;
+    background: #484a4c;
+}
+
+#group-bar > ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.group-item {
+    list-style-type: none;
+    font-size: 150%;
+    text-align: center;
+    padding: 5% 0;
+    margin: 15% 0;
+    width: 100%;
+}
+
+.group-item:hover{
+    background: #75777a;
+}
 
 
+/* Chat */
+
+#chat_container{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: flex-end;
+    overflow: hidden;
+    background: #545f66;
+}
+
+#chat-input{
+    min-height: 1em;
+    max-height: 6em;
+    width: 100%;
+    padding: 2% 0;
+    display: flex;
+    align-items: center;
+}
+
+/* Chat Input */
+
+#chat-input > textarea {
+    margin: 1% 0% 1% 1%;
+    padding: 0;
+    float: left;
+    resize: none;
+    width: 100%;
+    height: 100%;
+}
+
+#chat-input > button {
+    margin: 0 1% 0 0;
+    height: 100%;
+    width: 50px;
+    float: left;
+}
+
+
+/* Chat Window */
+
+#chat-window{
+    width: 100%;
+    height: 80%;
+    background: #829399;
+}
+
+#chat-window > ul {
+    margin: 2%;
+    padding: 0;
+    background: white;
+    border-radius: 10px;
+    height: 90%;
+    overflow: auto;
+    scrollbar-width: thin;
+}
+
+.messages {
+    list-style-type: none;
+    position: relative;
+    display: flex;
+    height: 5em;
+    border-bottom: 1px solid black;
+}
+
+.messages > .avatar {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 5em;
+}
+
+.avatar > img {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+}
+
+.avatar > p{
+    margin: 10px;
+}
+
+.messages > p {
+    width: 80%;
+    height: 50%;
+}
+
+.messages > .timestamp {
+    padding: 10px;
+    margin: 10px;
+    height: 50%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+/* Active Users */
+
+#users-bar > ul{
+    width: 5em;
+}
+
+
+/* Stream */
+
+#stream-button{
+    width: 100%;
+    margin: 5% 0;
+}
+
+#stream{
+    width: 65%;
+    background: rgb(130, 147, 153);
+}
