--- a/Public/CSS/Community/Channels.css
+++ b/Public/CSS/Community/Channels.css
@@ -71,6 +71,7 @@ html, body{
 
 #group-bar{
     width: 8em;
+    flex: 1;
     background: #484a4c;
 }
 
@@ -139,7 +140,7 @@ html, body{
 
 #chat-window{
     width: 100%;
-    height: 80%;
+    height: 100%;
     background: #829399;
 }
 
@@ -148,7 +149,7 @@ html, body{
     padding: 0;
     background: white;
     border-radius: 10px;
-    height: 90%;
+    height: 94%;
     overflow: auto;
     scrollbar-width: thin;
 }
