--- a/Public/CSS/Community/List.css
+++ b/Public/CSS/Community/List.css
@@ -1,4 +1,4 @@
-#channel-list{
+#channel-list, #user-list{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,12 +21,12 @@
     margin: 2em;
 }
 
-#channel-list > ul {
+#channel-list > ul, #user-list > ul {
     padding: 0;
     list-style: none;
 }
 
-#channel-list > ul > li {
+#channel-list > ul > li, #user-list > ul > li {
     background: var(--card-bg);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 2em;
